--- a/package.json
+++ b/package.json
@@ -29,11 +29,16 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-deck-swiper": "^2.0.17",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-image-overlay": "^0.1.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-checkbox": "~3.0.0",
+    "expo-linear-gradient": "~13.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
