--- a/package.json
+++ b/package.json
@@ -15,30 +15,32 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@dotlottie/react-player": "^1.6.19",
     "@expo/vector-icons": "^14.0.0",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.8",
+    "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.5",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
+    "lottie-react-native": "6.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-deck-swiper": "^2.0.17",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-overlay": "^0.1.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "expo-checkbox": "~3.0.0",
-    "expo-linear-gradient": "~13.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
