--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@birdwingo/react-native-instagram-stories": "^1.2.10",
     "@dotlottie/react-player": "^1.6.19",
     "@expo/vector-icons": "^14.0.0",
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.8",
+    "expo-blur": "~13.0.2",
     "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.5",
@@ -40,9 +42,9 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-size-matters": "^0.4.2",
+    "react-native-svg": "^15.3.0",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.10",
-    "expo-blur": "~13.0.2"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
