--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.4",
     "@types/react": "~18.2.45",
     "@types/react-native-htmlview": "^0.16.5",
     "@types/react-native-vector-icons": "^6.4.18",
