--- a/app.json
+++ b/app.json
@@ -28,7 +28,8 @@
       "favicon": "./app/assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
