--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-size-matters": "^0.4.2",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
@@ -55,6 +56,7 @@
     "@types/lodash": "^4.17.4",
     "@types/react": "~18.2.45",
     "@types/react-native-htmlview": "^0.16.5",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
