swiping can function without websockets fallbacks to http if there are connection issues; styling changes

--- a/app.json
+++ b/app.json
@@ -18,14 +18,14 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./app/assets/juno.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#000000"
       },
       "package": "com.learnables.juno"
     },
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./app/assets/images/favicon.png"
+      "favicon": "./app/assets/images/juno.png"
     },
     "plugins": [
       "expo-router",
