--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native": "0.74.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-image-overlay": "^0.1.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-size-matters": "^0.4.2",
