--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-checkbox": "~3.0.0",
     "expo-constants": "16.0.2",
     "expo-font": "12.0.7",
+    "expo-image": "^1.12.12",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "3.5.15",
@@ -38,8 +39,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-image-modal": "^3.0.4",
     "react-native-image-overlay": "^0.1.2",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-size-matters": "^0.4.2",
