--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Juno",
+    "name": "Juno : Shop Women's Fashion",
     "slug": "juno",
     "version": "0.0.1",
     "orientation": "portrait",
@@ -13,14 +13,15 @@
       "backgroundColor": "#C80321"
     },
     "ios": {
-      "supportsTablet": false
+      "supportsTablet": false,
+      "bundleIdentifier": "com.thejunoshop.app"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./app/assets/juno.png",
         "backgroundColor": "#C80321"
       },
-      "package": "com.learnables.juno"
+      "package": "com.thejunoshop.app"
     },
     "web": {
       "bundler": "metro",
