--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-date-picker": "^5.0.4",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-image-modal": "^3.0.4",
     "react-native-image-overlay": "^0.1.2",
