--- a/app.json
+++ b/app.json
@@ -35,7 +35,8 @@
     "plugins": [
       "./plugins/withCustomAndroidManifest.js",
       "expo-router",
-      "expo-font" 
+      "expo-font",
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
