added inter, poppins, montserrat fonts and PrimaryInput Component as well ImageInput

--- a/app.json
+++ b/app.json
@@ -36,7 +36,8 @@
       "./plugins/withCustomAndroidManifest.js",
       "expo-router",
       "expo-font",
-      "expo-secure-store"
+      "expo-secure-store",
+      "expo-image-picker"
     ],
     "experiments": {
       "typedRoutes": true
