--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@birdwingo/react-native-instagram-stories": "^1.2.10",
     "@dotlottie/react-player": "^1.6.19",
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@expo-google-fonts/montserrat": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
     "@lottiefiles/react-lottie-player": "^3.5.4",
@@ -28,6 +30,7 @@
     "expo-constants": "16.0.2",
     "expo-font": "12.0.7",
     "expo-image": "^1.12.12",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "3.5.15",
