--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-image-modal": "^3.0.4",
     "react-native-image-overlay": "^0.1.2",
+    "react-native-keychain": "^8.2.0",
     "react-native-reanimated": "^3.10.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
